onselct removes item but patch still needs to be patched

--- a/src/app/pages/trainer-page/trainer-page.page.html
+++ b/src/app/pages/trainer-page/trainer-page.page.html
@@ -1,4 +1,4 @@
-<h1 *ngIf="userData"> {{userData.username}}'s Trainer Page </h1>
+<h1 *ngIf="userData" class="font-bold text-3xl text-blue-600"> {{userData.username}}'s Trainer Page </h1>
 
 
 
