--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
-<h1 class="font-bold text-3xl text-blue-600">Hello world</h1>
+<!--<h1 class="font-bold text-3xl text-blue-600">Hello world</h1>-->
 <router-outlet></router-outlet>
