--- a/src/app/pages/trainer-page/trainer-page.page.html
+++ b/src/app/pages/trainer-page/trainer-page.page.html
@@ -1,10 +1,11 @@
-<h1 *ngIf="userData" class="font-bold text-3xl text-blue-600"> {{userData.username}}'s Trainer Page </h1>
+<h1 *ngIf="username" class="font-bold text-3xl text-blue-600"> {{username}}'s Trainer Page </h1>
 
 
 
 <ul  *ngIf="userPokemon ">
   <li *ngFor="let pokemon of userPokemon; let indexOfelement=index;" >
      {{ pokemon }}
+    <img [src]="getPokimonImage(pokemon)" alt="pokemon" width="100" height="100">
 
     <button class="bg-black hover:bg-red-500  text-white font-bold py-2 px-4 rounded" (click) ="onSelect(pokemon, indexOfelement)" >
       Remove
