--- a/src/app/pages/trainer-page/trainer-page.page.html
+++ b/src/app/pages/trainer-page/trainer-page.page.html
@@ -1,17 +1,42 @@
-<h1 *ngIf="username" class="font-bold text-3xl text-blue-600"> {{username}}'s Trainer Page </h1>
+<!--<h1 *ngIf="username" class="font-bold text-3xl text-blue-600"> {{username}}'s Trainer Page </h1>
 
 
 
-<ul  *ngIf="userPokemon ">
+<ul  *ngIf="userPokemon " class="list-disc">
+
   <li *ngFor="let pokemon of userPokemon; let indexOfelement=index;" >
-     {{ pokemon }}
-    <img [src]="getPokimonImage(pokemon)" alt="pokemon" width="100" height="100">
+     {{ pokemon.name }}
+
+    <img [src]="getPokemonImage(pokemon.url)" alt="pokemon" width="100" height="100">
 
     <button class="bg-black hover:bg-red-500  text-white font-bold py-2 px-4 rounded" (click) ="onSelect(pokemon, indexOfelement)" >
       Remove
     </button>
 
   </li>
-</ul>
+</ul>-->
+<h1 *ngIf="username" class="font-bold text-3xl text-blue-600 w-1/2 mx-auto"> {{username}}'s Trainer Page </h1>
 
+<table *ngIf="userPokemon" class="w-1/2 mx-auto text-left table-auto">
+  <thead>
+  <tr class="bg-gray-800 text-white">
+    <th class="px-4 py-2">Pokemon Name</th>
+    <th class="px-4 py-2">Image</th>
+    <th class="px-4 py-2">Action</th>
+  </tr>
+  </thead>
+  <tbody>
+  <tr *ngFor="let pokemon of userPokemon; let indexOfelement=index;" class="bg-gray-100">
+    <td class="border px-4 py-2 font-bold">{{ pokemon.name }}</td>
+    <td class="border px-4 py-2">
+      <img [src]="getPokemonImage(pokemon.url)" alt="pokemon" width="100" height="100">
+    </td>
+    <td class="border px-4 py-2">
+      <button class="bg-black hover:bg-red-500 text-white font-bold py-2 px-4 rounded" (click)="onSelect(pokemon, indexOfelement)">
+        Remove
+      </button>
+    </td>
+  </tr>
+  </tbody>
+</table>
 
