--- a/src/app/pages/catalogue-page/catalogue-page.page.html
+++ b/src/app/pages/catalogue-page/catalogue-page.page.html
@@ -1,3 +1,3 @@
-<div *ngFor="let pokemon of pokemonList$ | async">
-  <p>{{pokemon.name + pokemon.url}}</p>
+<div>
+  <app-catalogue-list></app-catalogue-list>
 </div>
