--- a/src/app/pages/catalogue-page/catalogue-page.page.html
+++ b/src/app/pages/catalogue-page/catalogue-page.page.html
@@ -1,3 +1,5 @@
 <div>
-  <app-catalogue-list></app-catalogue-list>
+  <div class="flex">
+    <app-catalogue-list></app-catalogue-list>
+  </div>
 </div>
