--- a/src/app/pages/login-page/login-page.page.html
+++ b/src/app/pages/login-page/login-page.page.html
@@ -1,3 +1,11 @@
 <main class="container mx-auto px-4">
-  <app-login-form (login)="handleLogin()"></app-login-form>
+<!--  <div class="relative bg-indigo-500 h-64 w-full">-->
+
+
+<!--    <div class="absolute top-0 bottom-0 left-0 right-0 bg-indigo-600 bg-gradient-to-r from-indigo-500 to-purple-500"></div>-->
+
+
+    <app-login-form (login)="handleLogin()"></app-login-form>
+
+
 </main>
