--- a/src/app/pages/trainer-page/trainer-page.page.html
+++ b/src/app/pages/trainer-page/trainer-page.page.html
@@ -1,4 +1,4 @@
-
+<img src="pokemon-logo-black-transparent.png" class="center">
 <h1 *ngIf="username" class="font-bold text-3xl text-blue-600 w-1/2 mx-auto"> {{username}}'s Trainer Page </h1>
 
 <table *ngIf="userPokemon" class="w-1/2 mx-auto text-left table-auto">
