Added routing butons

--- a/src/app/pages/catalogue-page/catalogue-page.page.html
+++ b/src/app/pages/catalogue-page/catalogue-page.page.html
@@ -1,4 +1,15 @@
 <div>
+  <div class="text-center flex">
+    <!-- Export to separate hero component? -->
+    <a routerLink="/trainer-page"
+      ><button
+        class="absolute top-2 left-5 bg-red-500 px-2 py-1 rounded text-white font-semibold"
+      >
+        Trainer Page
+      </button></a
+    >
+    <h1 class="text-2xl font-semibold mx-auto">Catalogue Page</h1>
+  </div>
   <div class="flex">
     <app-catalogue-list></app-catalogue-list>
   </div>
