--- a/src/app/pages/trainer-page/trainer-page.page.html
+++ b/src/app/pages/trainer-page/trainer-page.page.html
@@ -1,34 +1,13 @@
 <div class="flex">
-  <a routerLink="/catalogue-page"
-    ><button
-      class="absolute top-2 left-5 bg-red-500 px-2 py-1 rounded text-white font-semibold"
-    >
-      Catalogue Page
-    </button></a
-  >
+  <a routerLink="/catalogue-page"><button class="absolute top-2 left-5 bg-blue-400 hover:bg-blue-300 px-2 py-1 rounded text-white font-semibold">Catalogue Page</button></a>
 
-  <h1 *ngIf="userData" class="font-bold text-3xl text-blue-600 mx-auto">
-    {{userData.username}}'s Trainer Page
-  </h1>
 </div>
 
-<ul *ngIf="userPokemon" class="mt-10">
-  <li *ngFor="let pokemon of userPokemon; let indexOfelement=index;">
-    {{ pokemon }}
-
-    <button
-      class="bg-black hover:bg-red-500 text-white font-bold py-2 px-4 rounded"
-      (click)="onSelect(pokemon, indexOfelement)"
-    >
-      Remove
-    </button>
-  </li>
-</ul>
--->
-<img src="pokemon-logo-black-transparent.png" class="center">
+<img src="./assets/pokemon-logo-black-transparent.png" width="200" height="300" class="mx-auto" />
 <h1 *ngIf="username" class="font-bold text-3xl text-blue-600 w-1/2 mx-auto"> {{username}}'s Trainer Page </h1>
 
 <table *ngIf="userPokemon" class="w-1/2 mx-auto text-left table-auto">
+
   <thead>
   <tr class="bg-gray-800 text-white">
     <th class="px-4 py-2">Pokemon Name</th>
