--- a/src/app/pages/catalogue-page/catalogue-page.page.html
+++ b/src/app/pages/catalogue-page/catalogue-page.page.html
@@ -1,16 +1,52 @@
+<!--
+
 <div>
+
   <div class="text-center flex">
-    <!-- Export to separate hero component? -->
+    &lt;!&ndash; Export to separate hero component? &ndash;&gt;
+
     <a routerLink="/trainer-page"
-      ><button
+    >
+      <button
         class="absolute top-2 left-5 bg-red-500 px-2 py-1 rounded text-white font-semibold"
       >
         Trainer Page
-      </button></a
-    >
+      </button>
+    </a>
+
     <h1 class="text-2xl font-semibold mx-auto">Catalogue Page</h1>
   </div>
   <div class="flex">
+    <app-catalogue-list></app-catalogue-list>
+  </div>
+</div>
+-->
+
+
+<div>
+  <div class="text-center flex">
+    <!-- Add an image container -->
+    <div class="image-container">
+      <img src="./assets/pokemon-logo-black-transparent.png" width="200" height="200" alt="your-image-alt-text">
+    </div>
+
+    <!-- Export to separate hero component? -->
+
+    <a routerLink="/trainer-page"
+    >
+      <button
+        class="absolute top-2 right-5 bg-red-500 px-2 py-1 rounded text-white font-semibold"
+      >
+        Trainer Page
+      </button>
+    </a>
+
+
+    <h1 class="text-2xl flex flex-wrap  mx-auto ">Catalogue Page</h1>
+  </div>
+  <div class="flex">
+
+
     <app-catalogue-list></app-catalogue-list>
   </div>
 </div>
