--- a/src/app/components/catalogue-list/catalogue-list.component.html
+++ b/src/app/components/catalogue-list/catalogue-list.component.html
@@ -1,11 +1,12 @@
-
-<div class="flex flex-wrap w-1/3 mx-auto">
-  <div *ngFor="let pokemon of pokemonList$ | async" class="w-40 bg-slate-300 flex flex-col my-2 mx-4 p-4" >
+<div class="flex flex-wrap w-1/2 mx-auto">
+  <div
+    *ngFor="let pokemon of pokemonList$ | async"
+    class="w-40 bg-slate-300 flex flex-col my-2 mx-4 p-4"
+  >
     <h1 class="text-center text-xl font-medium">{{ pokemon.name }}</h1>
     <img [src]="generatePokemonImg(pokemon.url)" class="h-20 mx-auto my-4" />
     <div class="flex justify-between">
-
-  <!--    <div class="text-sm font-medium">HP: {{ pokemon.stats[0].base_stat }}</div>
+      <!--    <div class="text-sm font-medium">HP: {{ pokemon.stats[0].base_stat }}</div>
       <div class="text-sm font-medium">Attack: {{ pokemon.attack }}</div>
       <div class="text-sm font-medium">Defense: {{ pokemon.defense }}</div>-->
     </div>
@@ -17,4 +18,3 @@
     </button>
   </div>
 </div>
-
