--- a/src/app/pages/catalogue-page/catalogue-page.page.html
+++ b/src/app/pages/catalogue-page/catalogue-page.page.html
@@ -1,28 +1,5 @@
-<div>
+<app-catalogue-hero></app-catalogue-hero>
 
-  <div class="text-center flex">
-    <!-- Add an image container -->
-    <div class="image-container">
-      <img src="./assets/pokemon-logo-black-transparent.png" width="200" height="200" alt="your-image-alt-text">
-    </div>
-
-    <!-- Export to separate hero component? -->
-
-    <a routerLink="/trainer-page"
-    >
-      <button
-        class="absolute top-2 right-5 bg-red-500 px-2 py-1 rounded text-white font-semibold"
-      >
-        Trainer Page
-      </button>
-    </a>
-
-
-    <h1 class="text-2xl flex flex-wrap  mx-auto ">Catalogue Page</h1>
-  </div>
-  <div class="flex">
-
-
-    <app-catalogue-list></app-catalogue-list>
-  </div>
+<div class="flex w-full">
+  <app-catalogue-list></app-catalogue-list>
 </div>
