--- a/src/app/pages/trainer-page/trainer-page.page.html
+++ b/src/app/pages/trainer-page/trainer-page.page.html
@@ -1,31 +1,43 @@
-<div class="flex">
+<!-- <div class="flex">
   <a routerLink="/catalogue-page"><button class="absolute top-2 left-5 bg-blue-400 hover:bg-blue-300 px-2 py-1 rounded text-white font-semibold">Catalogue Page</button></a>
 
 </div>
 
 <img src="./assets/pokemon-logo-black-transparent.png" width="200" height="300" class="mx-auto" />
-<h1 *ngIf="username" class="font-bold text-3xl text-blue-600 w-1/2 mx-auto"> {{username}}'s Trainer Page </h1>
+<h1 *ngIf="username" class="font-bold text-3xl text-blue-600 w-1/2 mx-auto"> {{username}}'s Trainer Page </h1> -->
+
+<app-trainer-hero></app-trainer-hero>
 
 <table *ngIf="userPokemon" class="w-1/2 mx-auto text-left table-auto">
-
   <thead>
-  <tr class="bg-gray-800 text-white">
-    <th class="px-4 py-2">Pokemon Name</th>
-    <th class="px-4 py-2">Image</th>
-    <th class="px-4 py-2">Action</th>
-  </tr>
+    <tr class="bg-gray-800 text-white">
+      <th class="px-4 py-2">Pokemon Name</th>
+      <th class="px-4 py-2">Image</th>
+      <th class="px-4 py-2">Action</th>
+    </tr>
   </thead>
   <tbody>
-  <tr *ngFor="let pokemon of userPokemon; let indexOfelement=index;" class="bg-gray-100">
-    <td class="border px-4 py-2 font-bold">{{ pokemon.name }}</td>
-    <td class="border px-4 py-2">
-      <img [src]="getPokemonImage(pokemon.url)" alt="pokemon" width="100" height="100">
-    </td>
-    <td class="border px-4 py-2">
-      <button class="bg-black hover:bg-red-500 text-white font-bold py-2 px-4 rounded" (click)="onSelect(pokemon, indexOfelement)">
-        Remove
-      </button>
-    </td>
-  </tr>
+    <tr
+      *ngFor="let pokemon of userPokemon; let indexOfelement=index;"
+      class="bg-gray-100"
+    >
+      <td class="border px-4 py-2 font-bold">{{ pokemon.name }}</td>
+      <td class="border px-4 py-2">
+        <img
+          [src]="getPokemonImage(pokemon.url)"
+          alt="pokemon"
+          width="100"
+          height="100"
+        />
+      </td>
+      <td class="border px-4 py-2">
+        <button
+          class="bg-black hover:bg-red-500 text-white font-bold py-2 px-4 rounded"
+          (click)="onSelect(pokemon, indexOfelement)"
+        >
+          Remove
+        </button>
+      </td>
+    </tr>
   </tbody>
 </table>
