--- a/src/app/components/catalogue-hero/catalogue-hero.component.html
+++ b/src/app/components/catalogue-hero/catalogue-hero.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-64 bg-blue-400 relative">
+<div class="flex h-64 bg-[#0f6cc1] relative">
   <img src="./assets/pokemon-logo-black-transparent.png" class="absolute top-0 left-0 h-64" alt="your-image-alt-text"/>
   <h1 class="text-5xl m-auto font-semibold text-white">Catalogue Page</h1>
   <img
@@ -13,13 +13,7 @@
       Trainer Page
     </button>
   </a>
+
 </div>
 
-<!-- Add an image container -->
-<!-- <div class="image-container">
-        <img
-          src="./assets/pokemon-logo-black-transparent.png"
-          width="200"
-          height="200"
-          alt="your-image-alt-text"
-        /> -->
+
