--- a/src/app/components/trainer-hero/trainer-hero.component.html
+++ b/src/app/components/trainer-hero/trainer-hero.component.html
@@ -1,4 +1,4 @@
-<div class="flex h-64 bg-[#ed5432] relative">
+<div class="flex h-64 bg-[#b14831] relative">
   <h1 class="text-5xl m-auto font-semibold text-white">Trainer Page</h1>
   <img src="./assets/pokemon-logo-black-transparent.png" class="absolute top-0 left-0 h-64" alt="your-image-alt-text"/>
   <img
