--- a/src/app/components/catalogue-hero/catalogue-hero.component.html
+++ b/src/app/components/catalogue-hero/catalogue-hero.component.html
@@ -1,5 +1,9 @@
 <div class="flex h-64 bg-blue-400 relative">
-  <img src="./assets/pokemon-logo-black-transparent.png" class="absolute top-0 left-0 h-64" alt="your-image-alt-text"/>
+  <img
+    src="./assets/pokemon-logo-black-transparent.png"
+    class="absolute top-0 left-0 h-64"
+    alt="your-image-alt-text"
+  />
   <h1 class="text-5xl m-auto font-semibold text-white">Catalogue Page</h1>
   <img
     src="https://archives.bulbagarden.net/media/upload/5/52/HGSS_Ethan_Back.png"
@@ -11,6 +15,12 @@
       class="absolute top-2 right-5 bg-red-500 px-2 py-1 rounded text-white font-semibold"
     >
       Trainer Page
+    </button>
+    <button
+      (click)="logout()"
+      class="absolute top-12 right-5 bg-red-700 px-2 py-1 rounded text-white font-semibold"
+    >
+      Logout
     </button>
   </a>
 </div>
