--- a/src/app/components/catalogue-list/catalogue-list.component.html
+++ b/src/app/components/catalogue-list/catalogue-list.component.html
@@ -1,4 +1,4 @@
-<div class="flex flex-wrap w-1/2 mx-auto">
+<div class="flex flex-wrap mx-auto">
   <div
     *ngFor="let pokemon of pokemonList$ | async"
     class="w-40 bg-slate-300 flex flex-col my-2 mx-4 p-4 h-[270px]"
@@ -7,12 +7,7 @@
       {{ pokemon.name.charAt(0).toUpperCase() + pokemon.name.slice(1) }}
     </h1>
     <img [src]="generatePokemonImg(pokemon.url)" class="h-20 mx-auto my-4" />
-    <div class="flex justify-between">
-
-      <!--    <div class="text-sm font-medium">HP: {{ pokemon.stats[0].base_stat }}</div>
-      <div class="text-sm font-medium">Attack: {{ pokemon.attack }}</div>
-      <div class="text-sm font-medium">Defense: {{ pokemon.defense }}</div>-->
-    </div>
+    <div class="flex justify-between"></div>
     <button
       *ngIf="!hasCaught(pokemon)"
       class="py-2 px-4 bg-white rounded my-2 h-10"
@@ -30,12 +25,11 @@
     </div>
 
     <button
-      (click)="showInfo(pokemon)"
+      (click)="sendPokemon(pokemon)"
       class="block text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center"
       type="button"
     >
       Show info
     </button>
-
   </div>
 </div>
