--- a/src/app/components/catalogue-list/catalogue-list.component.html
+++ b/src/app/components/catalogue-list/catalogue-list.component.html
@@ -18,9 +18,9 @@
 
     <img
       *ngIf="hasCaught(pokemon)"
-      src="./assets/closed-pokeball.png"
+      src="./assets/poke-ball.png"
       alt="Pokeball"
-      class="h-10 w-10 mx-auto my-2 hover:hidden"
+      class="h-10 w-10 mx-auto my-2"
     />
 
     <button
